# LogLibrary

./: CMakeLists.txt  loglibrary.h  readme.md
include/: loglibrary.h
